HADI'S API CODE ADDED